Project

General

Profile

Actions

Bug #22872

closed

"rbd trash purge --threshold" should support data pool

Added by Jason Dillaman about 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Currently only the base pool is used for calculating usage.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #24476: mimic: "rbd trash purge --threshold" should support data poolResolvedNathan CutlerActions
Actions #1

Updated by Rishabh Dave about 6 years ago

I look forward to try fixing this bug? Can I get a recipe to reproduce the bug?

Actions #2

Updated by Jason Dillaman about 6 years ago

Create and fill images that utilize a data pool (i.e. rbd create --size 10G --data-pool=datapool rbd/image). If you move those images to the trash and attempt to delete them using a purge threshold, only the "rbd" pool utilization will be checked instead of the "datapool" pool.

Actions #3

Updated by Rishabh Dave about 6 years ago

Well, what's the difference between the base pool and the data pool? I did couldn't find anything that would tell me the difference between these in docs, source code and web. Is it, somehow, related to tiering?

And, ideally it should check for both of them or either (depending on the user/situation)?

Actions #4

Updated by Jason Dillaman about 6 years ago

It's related to where the image data is stored -- which would be the bulk storage usage source for a trashed image.

Actions #5

Updated by Mahati Chamarthy about 6 years ago

Does it mean support an option like:

rbd trash purge <pool-name> --threshold '<x>' --data-pool=<data-pool-name>

..and it looks for pool utilization in <data-pool-name> as that would be the source for trashed images?

Actions #6

Updated by Jason Dillaman about 6 years ago

@Mahati: I would think it should just be implicit. It could loop through all the trashed images whose deferment end time is in the past and compute a set of (data) pools in-use by the images. For each pool in the set, delete trashed images in that (data) pool until that pool's threshold is met.

Actions #7

Updated by Jason Dillaman almost 6 years ago

  • Status changed from New to Fix Under Review
Actions #8

Updated by Jason Dillaman almost 6 years ago

  • Backport set to mimic
Actions #9

Updated by Jason Dillaman almost 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #10

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24476: mimic: "rbd trash purge --threshold" should support data pool added
Actions #11

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF